# poker-data-analysis

./: .env.example  .gitignore  DB_Schema.xlsx  README.md  analysis.ipynb  analysis_dashboard.py  basic_player_behavior_analysis.sql  data_validation_queries.sql  database_creation_schema.sql  database_setup_script.sql  db_setup.sql  last_processed_file  population_script.py  pyproject.toml  ~$DB_Schema.xlsx
.github/workflows/: scheduled-scrape.yml
dashboard_data/: biggest_pots.csv  ten_most_profitable.csv  vpip_pfr_3bet_across_stakes.csv  winnings_by_hand.csv
data/: action_type_rates.csv  avg_winnings.csv  ten_biggest_pots.csv  ten_least_profitable.csv  vpip_pfr_percentages.csv
src/: analysis_dashboard.py  population_script.py
